Fix unpleasant resize effect on Timetable page
Fixed that unpleasant resize effect that is caused by the falling snowflakes going offscreen.

--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -17,6 +17,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "poppins", sans-serif;
+  overflow: none auto;
 }
 
 body {
