--- a/src/stylesheets/timetable.css
+++ b/src/stylesheets/timetable.css
@@ -40,7 +40,7 @@
   background: white;
   border-radius: 50%;
   position: absolute;
-  top: -5vh;
+  top: 0;
 }
 
 @keyframes snowfall {
@@ -48,7 +48,7 @@
     transform: translate3d(var(--left-ini), 0, 0);
   }
   100% {
-    transform: translate3d(var(--left-end), 110vh, 0);
+    transform: translate3d(var(--left-end), 96vh, 0);
   }
 }
 
